--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <style>
     .demo-list-item {
-      width: 300px;
+      width: 300px; padding:2px;
     }
     </style>
     </head>
